# etl-python-project

./: Makefile  README.md  pyproject.toml
config/: settings.yaml
data/: users.csv
docker/: docker-compose.yml
logs/: etl.json
src/: config.py  main.py  models.py
src/etl/extract/: api_client.py
src/etl/transform/: core.py
