[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-python-project"
version = "0.1.0"
description = "A simple ETL pipeline for extracting, transforming and loading user data."
readme = "README.MD"
authors = [ { name = "Suresh" } ]
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"

# Runtime dependencies (kept aligned with requirements.txt)
dependencies = [
    "pandas",
    "requests",
    "SQLAlchemy",
    "psycopg2-binary",
    "python-dotenv",
    "PyYAML",
    "tenacity",
    "iniconfig",
    "pydantic",
]

[project.optional-dependencies]
# developer extras
dev = ["pytest", "black"]

[project.urls]
"Homepage" = "https://example.com/etl-python-project"
"Repository" = "https://example.com/etl-python-project.git"

[tool.setuptools]
# keep default settings (no package include/exclude changes applied)

[tool.setuptools.packages.find]
where = ["src"]
include = ["src*"]
